- Hopefully fixed 'Overflowed unzipbuf increase UNZIP_BUFFER_SIZE' issue,
  reported by Monk (#0003453). It should be large enough now. Also changed the
  way we deal with this when it happens (if it ever happens again..): we now
  close the server connection, instead of trying to continue, because continueing
  is too dangerous.
- Remove part reason when user is banned, suggested by vonitsanet (#0003354).
- Fixed set::modes-on-join: could crash or disfunction with certain
  parameter mode combinations.
- Minor source cleanup in src/modules/m_map.c, suggested by fez (#0003540).
- Usermode modules now no longer have to be permanent (#3174), this was
  simply a bug that was introduced when adding remote includes support years
  ago.
- Channelmode modules without parameters (like: +X, but not: +X 1) no longer
  have to be permanent. Channelmodes with parameters still have to be PERM
  however, and there are currently no plans to change it.
- Fixed bug (in all Unreal versions) with parameter channelmodes, any 3rd
  party module which adds an extra parameter chanmode could cause crashes.
- Added set::level-on-join: which level should the user get when (s)he's is
  the first to enter a channel. Currently only 'none' and 'op' are supported.
- unreal32docs.html: doubt it will help much but at least this makes it a
  little bit more clear (#3548), chatops vs globops.
- ChanMode +S/+c: reverse is now stripped/blocked as well, because it's
  similar to color, and is just as annoying (..if not worse).
- So called 'smart' banning is now disabled by default, this means you can
  now set a ban on *!*@*h.com and then later add one on *!*@*blah.com without
  any trouble. Previously the second one was rejected due to the former
  already matching it. To change it back edit the include/config.h setting
  SOCALLEDSMARTBANNING.
- Fixed (G)ZLINE check.. it was incorrectly rejecting many IPv6 bans.
  Reported by guigui (#0003572).