@@ -336,6 +336,8 @@
  * These are also in the range 600-799.
  */
 
+#define RPL_GONEAWAY         598
+#define RPL_NOTAWAY          599
 #define RPL_LOGON            600
 #define RPL_LOGOFF           601
 #define RPL_WATCHOFF         602
@@ -344,6 +346,8 @@
 #define RPL_NOWOFF           605
 #define RPL_WATCHLIST        606
 #define RPL_ENDOFWATCHLIST   607
+#define RPL_CLEARWATCH       608
+#define RPL_NOWISAWAY        609
 
 #define RPL_DCCSTATUS        617
 #define RPL_DCCLIST          618
